--- a/templates/image_extraction.html
+++ b/templates/image_extraction.html
@@ -34,7 +34,7 @@
     // Enable download button and update download link
     var downloadButton = document.getElementById("downloadBtn");
     downloadButton.disabled = false;
-    downloadButton.href = '/rasters/' + municipality + '/' + year+'.tif';  // Cambiar esta línea
+    downloadButton.href = '/rasters/' + municipality + '/' + year + '.tif';  // Cambio aquí
   }
 
   // Update year value in the label dynamically
@@ -46,7 +46,7 @@
 
       // Update download link dynamically
       var downloadButton = document.getElementById("downloadBtn");
-      downloadButton.href = '/rasters/' + municipality + '/' + year+'.tif';  // Cambiar esta línea
+      downloadButton.href = '/rasters/' + municipality + '/' + year + '.tif';  // Cambio aquí
   }
 </script>
 {% endblock %}
